--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
 }
 
 .home__main{
-    background-color: rgb(242, 223, 83);
+    background-color: rgb(242, 222, 82);
     display: flex;
     justify-content: center;
 }
@@ -23,6 +23,9 @@
     background-color: rgb(242, 223, 83);
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    outline-color: black;
+    outline: solid 5px;
 }
 
 /* .footer h1 {
@@ -31,11 +34,9 @@
 } */
 
 .punny {
-    border: none;
-    background-color: inherit;
-    outline: none;
     cursor: pointer;
-    width: 20px;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .yourburgers {
