--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,8 +10,8 @@
 }
 
 .home__belchers{
-    max-width: 1100px;
-    max-height: 1100px;
+    max-width: 968px;
+    max-height: 968px;
 }
 
 .footer {
@@ -40,22 +40,13 @@
 }
 
 .yourburgers {
-    border: none;
-    background-color: inherit;
-    outline: none;
     cursor: pointer;
-    width: 20px;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .gourmet {
-    border: none;
-    background: inherit;
-    outline: none;
     cursor: pointer;
-    width: 20px;
-}
-
-.burger {
-    max-width: 75px;
-    max-height: 75px;
+    max-width: 50%;
+    max-height: 50%;
 }
